# Laboratorio_di_programmazione_ciucani_matteo

./: CMakeLists.txt  Item.cpp  Item.h  Observer.cpp  Observer.h  ShoppingList.cpp  ShoppingList.h  User.cpp  User.h  main.cpp
test/: CMakeLists.txt  test_shopping_list.cpp  test_user.cpp
